--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-certifi==2020.6.20
-chardet==3.0.4
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
-dominate==2.5.2
+dominate==2.6.0
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap==4.0.2
 Flask-CKEditor==0.4.4.1
-Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-requests==2.24.0
-SQLAlchemy==1.3.19
-urllib3==1.25.10
+pip==20.3.3
+requests==2.25.1
+setuptools==51.3.3
+SQLAlchemy==1.3.22
+urllib3==1.26.2
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
