--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-pip==20.3.3
 requests==2.25.1
+psycopg2-binary==2.8.6
 setuptools==51.3.3
 SQLAlchemy==1.3.22
 urllib3==1.26.2
