--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+blinker==1.4
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+dnspython==2.1.0
 dominate==2.6.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
+Flask-Bootstrap4==4.0.2
 Flask-CKEditor==0.4.4.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 gunicorn==20.0.4
@@ -14,7 +19,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 requests==2.25.1
+pip==20.3.3
 psycopg2-binary==2.8.6
+python-dotenv==0.15.0
 setuptools==51.3.3
 SQLAlchemy==1.3.22
 urllib3==1.26.2
